style: fix background on mobile

--- a/data/style.css
+++ b/data/style.css
@@ -3,7 +3,7 @@
 
 body {
     overflow-y: scroll;
-    background: url('../img/blue.jpg') fixed;
+    background: url('../img/blue.jpg') fixed top center;
     background-size: cover;
     color: black;
     font-family: 'Roboto', sans-serif;
